--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "react-native-dotenv": "^2.5.1"
   },
   "private": true
 }
